<resources>
    <string name="app_name">Tourism Sri Lanka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchBarQueryHint">QueryHint</string>


    <!--Dashboard strings-->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_dashboard_greeting">Hello,</string>
    <string name="dashboard_username">Tylor Swift</string>
    <string name="dashboard_notification">Notifications</string>
    <string name="dashboard_contactUs">Contact us</string>
    <string name="dashboardRequestsBtn">My Requests</string>

    <string name="nav_food">food</string>
    <string name="nav_feedback">feedback</string>
    <string name="nav_hotel">hotel</string>
    <string name="nav_location">Location</string>


    <string name="hotel">Hotels</string>
    <string name="granbell">Granbell</string>
    <string name="marino">Marino</string>
    <string name="bookBtn">Book Now</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Contact Number</string>
    <string name="bookdate">Booking Date</string>
    <string name="NoOfRooms">Number of Rooms</string>
    <string name="guests">Number of Guests</string>
    <string name="days">Number of Days</string>
    <string name="submit_booking">Submit</string>
    <string name="confirm_book">Confirm Booking</string>
    <string name="amount">Total Amount to Pay ($) :</string>
    <string name="hotelId">Hotel ID</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="address">Address</string>
    <string name="des">Description</string>
    <string name="selectimg">Select Image</string>
    <string name="prices">Enter Rooms Prices (Price Per Day)</string>
    <string name="single">Single Bed Room</string>
    <string name="hotel_submit">Insert</string>
    <string name="doubl">Double Bed Room</string>
    <string name="delux">Delux Bed Room</string>
    <string name="allhotels">All Hotels</string>
    <string name="view_btn">View</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="view_hotel">View Hotel</string>
    <string name="update_submit">Submit</string>
    <string name="admin">Admin</string>
    <string name="hid">Hotel ID : A1201</string>

    <string-array name="type">
        <item>Single Bed Room</item>
        <item>Double Bed Room</item>
    </string-array>
</resources>