<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:background="#FFFEFE"
    android:orientation="vertical">

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Enter Booking Details"
        android:textColor="@color/enter_booking"
        android:textSize="@dimen/enter_booking" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hotel  :  "
            android:textColor="#1225CC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/booking_hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="Marino"
            android:textColor="#09090B"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="@dimen/booking_data" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/b_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/bookdate"
        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="Room Type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="56dp"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:backgroundTint="#673434"
            android:dropDownSelector="@android:drawable/arrow_down_float"
            android:entries="@array/type" />

    </LinearLayout>

    <EditText
        android:id="@+id/rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/NoOfRooms"
        android:inputType="number" />

    <EditText
        android:id="@+id/guests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/guests"
        android:inputType="number" />

    <EditText
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="number" />

    <Button
        android:id="@+id/b_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#00BCD4"
        android:gravity="center"
        android:onClick="submitBookingData"
        android:text="@string/submit_booking" />


</LinearLayout>